<resources>
    <string name="app_name">NeRB</string>

    <string name="opening_label">News Reader for the Blind and Visually Impaired</string>

    <string name="source_label">Choose source: \n
                                1. ABS-CBN. \n
                                2. GMA. \n
                                3. Inquirer. \n
                                4. Philippine Star.
    </string>

    <string name="source_label1">Choose source: \n
                                1. ABS-CBN. \n
                                2. Inquirer. \n
    </string>

    <string name="source_label2">Choose source: \n
                                1. ABS-CBN. \n
                                2. Inquirer. \n
                                3. CNN Philippines.
    </string>

    <string name="source">Source</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="article">Article</string>

    <string name="end_paragraph">\n End of paragraph.</string>
    <string name="end_article">\n End of article.</string>

    <string name="choose_article">Choose an article: \n</string>


    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>

    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>

    <string name="previous_paragraph">Previous paragraph.</string>
    <string name="next_paragraph">Next paragraph.</string>
    <string name="read_again">Read the article again.</string>
    <string name="go_to_source">Select new article.</string>

    <string name="speed">Speed</string>
    <string name="slow">Slow</string>
    <string name="normal">Normal</string>
    <string name="fast">Fast</string>
    <string name="sample">This is a sample text.</string>

    <string name="read">Read</string>
    <string name="bookmark">Bookmark Article</string>
    <string name="bookmarks">Go to Bookmarks</string>
    <string name="clear">Clear List</string>
    <string name="clear_list">Bookmark list cleared.</string>
    <string name="empty">There are no bookmarks.</string>

    <string name="prev">Previous</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>


    <string name="tv">TEXT VIIIIIEEEEEEW</string>
    <string name="fetch">Fetching news articles from </string>

    <string name="there_are">There are </string>
    <string name="bookmarks_enter">bookmarks \n</string>



    <string name="abs_categories1">Choose a category: \n
                                    1. News \n
                                    2. Business \n
                                    3. Entertainment \n
                                    4. Life \n
                                    5. Sports
    </string>

    <string name="abs_categories2">Choose a category: \n
                                    1. Overseas \n
                                    2. Spotlight
    </string>

    <string name="manila_times_categories1">Choose category: \n
                                    1. Nations \n
                                    2. Regions \n
                                    3. Opinion \n
                                    4. Business \n
                                    5. World
    </string>

    <string name="manila_times_categories2">Choose a category: \n
                                    1. Sports \n
                                    2. Lifestyle \n
                                    3. Entertainment \n
                                    4. The Sunday Times \n
                                    5. Public Square
    </string>

    <string name="cnn_categories1">Choose a category: \n
                                        1. News \n
                                        2. World \n
                                        3. Business \n
                                        4. Entertainment \n
                                        5. Sports
    </string>

    <string name="cnn_categories2">Choose a category: \n
                                   1. Transportation \n
    </string>


    <string name="inquirer_categories1">Choose a category: \n
                                        1. News \n
                                        2. Opinion \n
                                        3. Sports \n
                                        4. Lifestyle \n
                                        5. Entertainment
    </string>



    <string name="inquirer_categories2">Choose a category: \n
                                        1. Business \n
                                        2. Technology \n
                                        3. Global Nation
    </string>

    <string name="inquirer_news_subcategories1">Choose a subcategory: \n
                                                1. Headlines \n
                                                2. Metro \n
                                                3. Region \n
                                                4. Nation \n
                                                5. World
    </string>

    <string name="inquirer_opinion_subcategories1">Choose a subcategory: \n
                                                   1. Editorial \n
                                                   2. Columns \n
                                                   3. Viewpoints \n
                                                   4. Talk of the Town \n
                                                   5. Lovelife
    </string>


    <string name="inquirer_sports_subcategories1">Choose a subcategory: \n
                                                  1. Basketball \n
                                                  2. Boxing \n
                                                  3. Volleyball \n
                                                  4. Football \n
                                                  5. Other Sports
    </string>

    <string name="inquirer_sports_subcategories2">Choose a subcategory: \n
                                                    1. PBA \n
                                                    2. UAAP \n
                                                    3. NCAA \n
                                                    4. ONE Championship
    </string>

    <string name="inquirer_lifestyle_subcategories1">Choose a subcategory: \n
                                                     1. Fashion \n
                                                     2. Beauty \n
                                                     3. Culture \n
                                                     4. Events \n
                                                     5. Human Interest
    </string>

    <string name="inquirer_entertainment_subcategories1">Choose a subcategory: \n
                                                        1. Headlines \n
                                                        2. Latest Entertainment Stories \n
                                                        3. Columns \n
                                                        4. Movies \n
                                                        5. Indie Films
    </string>

    <string name="inquirer_business_subcategories1">Choose a subcategory: \n
                                                    1. Stock Exchange \n
                                                    2. Property Guide \n
                                                    3. Columns \n
                                                    4.  Stock Market Quarterly \n
                                                    5. Classifieds
    </string>


    <string name="inquirer_technology_subcategories1">Choose a subcategory: \n
                                                      1. Headlines \n
                                                      2. Latest Technology Stories
    </string>

    <string name="inquirer_global_nation_subcategories1">Choose a subcategory: \n
                                                         1. Philippines \n
                                                         2. Asia &amp; Pacific \n
                                                         3. Americas \n
                                                         4. Middle East &amp; Africa  \n
                                                         5. Europe
    </string>

    <string name="inquirer_global_nation_subcategories2">Choose a subcategory: \n
                                                         1. Global \n
                                                         2. Pinoy Columns \n
                                                         3. Events</string>

    <!--                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                  -->


    <string name="philstar_categories1">Choose a category: \n
                                        1. Headlines \n
                                        2. Opinion \n
                                        3. Nation \n
                                        4. World \n
                                        5. Business
    </string>

    <string name="philstar_categories2">Choose a category: \n
                                        1. Sports \n
                                        2. Entertainment \n
                                        3. Lifestyle\n
                                        4. Other Sections
    </string>

</resources>