<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutSpeedActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical">

    <TextView
        android:id="@+id/textViewSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sample" />


    <Button
        android:id="@+id/buttonSpeedSlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slow" />

    <Button
        android:id="@+id/buttonSpeedNormal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal" />

    <Button
        android:id="@+id/buttonSpeedFast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fast" />

</LinearLayout>